--- a/css/style.css
+++ b/css/style.css
@@ -112,12 +112,16 @@ footer {
 .accordion-body .menu.menu-nav .menu-item > a:hover, .accordion-body .menu.menu-nav .menu-item > a:focus {
   color: #FFF;
   background-color: #CE5C0D; }
+.accordion-body .menu.menu-nav .accordion[open].submenu {
+  transform: none; }
+.accordion-body .menu.menu-nav .submenu .accordion-header {
+  color: #4A4A4A; }
 
 /*  CUSTOM  */
 #mobile-links {
-  padding-left: 4rem; }
+  padding-left: 2rem; }
   #mobile-links .menu {
-    padding: 0.15rem 1rem 0.35rem 1.25rem; }
+    padding: 0.1rem 1rem 0.35rem 0.35rem; }
 
 .mobile-bar {
   padding: 0.35rem 1rem 0.35rem 1rem;
