--- a/css/style.scss
+++ b/css/style.scss
@@ -187,7 +187,6 @@ footer{
 .mobile-bar {
 	padding: 0.35rem 1rem 0.35rem 1rem;
 	max-height: 55px;
-	position: fixed;
 	z-index: 100;
 	width: 100vw;
 	.navbar-section {
@@ -222,6 +221,7 @@ footer{
 	width: 100%;
 	display: flex;
 	justify-content: center;
+	overflow: visible;
 	#social-card {
 		max-width: 750px;
 		margin-top: 1rem;
