--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,8 @@
 /*  PRESETS  */
 html, body {
   height: 100%;
-  width: 100%; }
+  width: 100%;
+  overflow-x: hidden; }
 
 a {
   color: #FFF; }
@@ -59,7 +60,10 @@ footer {
     display: flex !important; } }
 /*  OVERRIDES  */
 .navbar {
-  background-color: #E3782E; }
+  background-color: #E3782E;
+  position: sticky;
+  top: 0;
+  z-index: 100; }
   .navbar .navbar-section {
     align-items: flex-start; }
     .navbar .navbar-section a.btn.btn-link {
@@ -141,15 +145,24 @@ footer {
   max-height: 100vh !important; }
 
 .cover-photo {
-  max-height: 65vh;
-  margin: 0 auto;
+  max-height: 45vh;
   overflow: hidden;
-  position: relative; }
+  position: relative;
+  text-align: center;
+  width: 100%; }
+  .cover-photo .cover-photo-caption {
+    position: absolute;
+    bottom: 0;
+    margin-bottom: -2px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    -moz-transform: translate(-50%, 0);
+    -webkit-transform: translate(-50%, 0);
+    -o-transform: translate(-50%, 0);
+    -ms-transform: translate(-50%, 0); }
 
-.cover-photo-overlay {
-  z-index: 1;
-  position: absolute;
-  top: 40%; }
+.cover-photo-caption {
+  max-width: 80%; }
 
 .card-catalog {
   width: 100%;
