--- a/css/style.css
+++ b/css/style.css
@@ -5,246 +5,326 @@
 html, body {
   height: 100%;
   width: 100%;
-  overflow-x: hidden; }
+  overflow-x: hidden;
+}
 
 a {
-  color: #FFF; }
+  color: #FFF;
+}
 
 footer {
   background: #E3782E;
   color: #FFF;
   padding-top: 2rem;
-  padding-bottom: 1rem; }
-  footer .ragged-footy {
-    max-width: 71.25rem;
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 10pt; }
-    footer .ragged-footy:after {
-      display: table;
-      clear: both;
-      content: ''; }
-    footer .ragged-footy .footy-left {
-      width: calc(50% - 1rem);
-      float: left;
-      margin-left: calc(1rem / 2);
-      margin-right: calc(1rem / 2);
-      padding-right: 1rem;
-      text-align: right; }
-    footer .ragged-footy .footy-right {
-      width: calc(50% - 1rem);
-      float: left;
-      margin-left: calc(1rem / 2);
-      margin-right: calc(1rem / 2); }
-      footer .ragged-footy .footy-right ul {
-        text-align: left;
-        padding-left: 0;
-        padding-top: 0;
-        margin-top: 0;
-        margin-right: 0;
-        margin-bottom: 0;
-        margin-left: 0;
-        list-style: none; }
-        footer .ragged-footy .footy-right ul li {
-          margin-top: 0;
-          margin-right: .5rem;
-          margin-bottom: 0;
-          margin-left: 0; }
-          footer .ragged-footy .footy-right ul li a {
-            text-decoration: none;
-            color: #FFF; }
+  padding-bottom: 1rem;
+}
+footer .ragged-footy {
+  max-width: 71.25rem;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 10pt;
+}
+footer .ragged-footy:after {
+  display: table;
+  clear: both;
+  content: "";
+}
+footer .ragged-footy .footy-left {
+  width: calc(50% - 1rem);
+  float: left;
+  margin-left: calc(1rem / 2);
+  margin-right: calc(1rem / 2);
+  padding-right: 1rem;
+  text-align: right;
+}
+footer .ragged-footy .footy-right {
+  width: calc(50% - 1rem);
+  float: left;
+  margin-left: calc(1rem / 2);
+  margin-right: calc(1rem / 2);
+}
+footer .ragged-footy .footy-right ul {
+  text-align: left;
+  padding-left: 0;
+  padding-top: 0;
+  margin-top: 0;
+  margin-right: 0;
+  margin-bottom: 0;
+  margin-left: 0;
+  list-style: none;
+}
+footer .ragged-footy .footy-right ul li {
+  margin-top: 0;
+  margin-right: 0.5rem;
+  margin-bottom: 0;
+  margin-left: 0;
+}
+footer .ragged-footy .footy-right ul li a {
+  text-decoration: none;
+  color: #FFF;
+}
 
 /*  MEDIA QUERIES  */
 @media (max-width: 840px) {
   .show-md {
-    display: flex !important; } }
+    display: flex !important;
+  }
+}
 /*  OVERRIDES  */
 .navbar {
   background-color: #E3782E;
   position: sticky;
   top: 0;
-  z-index: 100; }
-  .navbar .navbar-section {
-    align-items: flex-start; }
-    .navbar .navbar-section a.btn.btn-link {
-      margin: 0 1em 0 1em;
-      padding: 2rem 0.4rem 0.35rem 0.4rem;
-      color: #FFF;
-      font-weight: 600;
-      border: none; }
-    .navbar .navbar-section a.btn.btn-link:hover {
-      border-top: 5px solid #FFFFFF; }
-  .navbar .navbar-section {
-    justify-content: center; }
-  .navbar .navbar-section:not(:first-child):last-child {
-    justify-content: center; }
+  z-index: 100;
+}
+.navbar .navbar-section {
+  align-items: flex-start;
+}
+.navbar .navbar-section a.btn.btn-link {
+  margin: 0 1em 0 1em;
+  padding: 2rem 0.4rem 0.35rem 0.4rem;
+  color: #FFF;
+  font-weight: 600;
+  border: none;
+}
+.navbar .navbar-section a.btn.btn-link:hover {
+  border-top: 5px solid #FFFFFF;
+}
+.navbar .navbar-section {
+  justify-content: center;
+}
+.navbar .navbar-section:not(:first-child):last-child {
+  justify-content: center;
+}
 
 .navbar-logo {
-  max-height: 100px; }
+  max-height: 100px;
+}
 
 .btn.btn-primary {
   background: #E3782E;
-  border-color: #CE5C0D; }
+  border-color: #CE5C0D;
+}
 
 .btn.btn-primary:hover, .btn.btn-primary:focus {
   background: #CE5C0D;
-  border-color: #CE5C0D; }
+  border-color: #CE5C0D;
+}
 
 .tab .tab-item a {
-  font-weight: 400; }
+  font-weight: 400;
+}
 .tab .tab-item a.active {
   border-color: #E3782E;
   color: #CE5C0D;
-  font-weight: 500; }
+  font-weight: 500;
+}
 .tab .tab-item.active a {
   border-color: #E3782E;
   color: #CE5C0D;
-  font-weight: 500; }
+  font-weight: 500;
+}
 
 .tab .tab-item a:focus, .tab .tab-item a:hover {
-  color: #CE5C0D; }
+  color: #CE5C0D;
+}
 
 .accordion-header {
   font-weight: 600;
-  color: #FFF; }
+  color: #FFF;
+}
 
 .accordion-header:hover {
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 .accordion-body .menu.menu-nav .menu-item {
-  color: #4A4A4A; }
+  color: #4A4A4A;
+}
 .accordion-body .menu.menu-nav .menu-item > a:hover, .accordion-body .menu.menu-nav .menu-item > a:focus {
   color: #FFF;
-  background-color: #CE5C0D; }
+  background-color: #CE5C0D;
+}
 .accordion-body .menu.menu-nav .submenu .accordion-header {
-  color: #4A4A4A; }
+  color: #4A4A4A;
+}
 
 /*  CUSTOM  */
+#ragged-mission {
+  margin: 0;
+  max-width: 100%;
+  background-color: #4A4A4A;
+}
+
 #mobile-links {
-  padding-left: 2rem; }
-  #mobile-links .menu {
-    padding: 0.1rem 1rem 0.35rem 0.35rem; }
+  padding-left: 2rem;
+}
+#mobile-links .menu {
+  padding: 0.1rem 1rem 0.35rem 0.35rem;
+}
 
 .mobile-bar {
   padding: 0.35rem 1rem 0.35rem 1rem;
   max-height: 55px;
   z-index: 100;
-  width: 100vw; }
-  .mobile-bar .navbar-section {
-    color: #FFF;
-    padding: 0.35rem 1rem 0.35rem 1rem;
-    justify-content: flex-start;
-    align-items: center; }
-    .mobile-bar .navbar-section .hamburgerBtn:hover {
-      cursor: pointer;
-      color: #FFF; }
-  .mobile-bar .navbar-section:not(:first-child):last-child {
-    justify-content: flex-end; }
+  width: 100vw;
+}
+.mobile-bar .navbar-section {
+  color: #FFF;
+  padding: 0.35rem 1rem 0.35rem 1rem;
+  justify-content: flex-start;
+  align-items: center;
+}
+.mobile-bar .navbar-section .hamburgerBtn:hover {
+  cursor: pointer;
+  color: #FFF;
+}
+.mobile-bar .navbar-section:not(:first-child):last-child {
+  justify-content: flex-end;
+}
 
 .mobile-nav-open {
-  max-height: 100vh !important; }
+  max-height: 100vh !important;
+}
 
 .cover-photo {
   max-height: 45vh;
   overflow: hidden;
   position: relative;
   text-align: center;
-  width: 100%; }
-  .cover-photo .cover-photo-caption {
-    position: absolute;
-    bottom: 0;
-    margin-bottom: -2px;
-    left: 50%;
-    transform: translate(-50%, 0);
-    -moz-transform: translate(-50%, 0);
-    -webkit-transform: translate(-50%, 0);
-    -o-transform: translate(-50%, 0);
-    -ms-transform: translate(-50%, 0); }
+  width: 100%;
+}
+.cover-photo .cover-photo-caption {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: -2px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  -moz-transform: translate(-50%, 0);
+  -webkit-transform: translate(-50%, 0);
+  -o-transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
+}
 
 .cover-photo-caption {
-  max-width: 80%; }
+  max-width: 80%;
+}
 
 .card-catalog {
   width: 100%;
   display: flex;
   justify-content: center;
-  overflow: visible; }
-  .card-catalog #social-card {
-    max-width: 750px;
-    margin-top: 1rem; }
-  .card-catalog #blog-card {
-    max-width: 750px;
-    margin-top: 1rem; }
-  .card-catalog #video-card {
-    max-width: 750px;
-    margin-top: 1rem; }
-  .card-catalog .disabled-card {
-    pointer-events: none;
-    opacity: .5; }
+  overflow: visible;
+}
+.card-catalog #social-card {
+  max-width: 750px;
+  margin-top: 1rem;
+}
+.card-catalog #blog-card {
+  max-width: 750px;
+  margin-top: 1rem;
+}
+.card-catalog #video-card {
+  max-width: 750px;
+  margin-top: 1rem;
+}
+.card-catalog .disabled-card {
+  pointer-events: none;
+  opacity: 0.5;
+}
 
 .promo-box-container {
-  max-width: 750px;
+  max-width: 1080px;
   margin-top: 1rem;
   margin-right: auto;
   margin-bottom: 1rem;
-  margin-left: auto; }
-  .promo-box-container .promo-box {
-    position: relative;
-    overflow: hidden;
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    text-align: center;
-    padding: 0;
-    height: 12rem;
-    transition: all 0.5s ease-out;
-    box-shadow: inset 0px 0px 9999px 9999px rgba(0, 0, 0, 0.5);
-    -webkit-box-shadow: inset 0px 0px 9999px 9999px rgba(0, 0, 0, 0.5);
-    -moz-box-shadow: inset 0px 0px 9999px 9999px rgba(0, 0, 0, 0.5); }
-    .promo-box-container .promo-box img {
-      margin: 0;
-      position: relative;
-      flex-shrink: 0;
-      min-width: 100%;
-      min-height: 100%;
-      z-index: -1;
-      bottom: 0;
-      transition: all 0.5s ease-out; }
-    .promo-box-container .promo-box .promo-text {
-      position: absolute;
-      top: 40%;
-      color: #FFF;
-      transition: all 0.5s ease-out; }
-  .promo-box-container .promo-box:hover, .promo-box-container .promo-box:focus {
-    box-shadow: inset 0px 0px 9999px 9999px rgba(227, 120, 46, 0.9);
-    -webkit-box-shadow: inset 0px 0px 9999px 9999px rgba(227, 120, 46, 0.9);
-    -moz-box-shadow: inset 0px 0px 9999px 9999px rgba(227, 120, 46, 0.9); }
-    .promo-box-container .promo-box:hover img, .promo-box-container .promo-box:hover .promo-text, .promo-box-container .promo-box:focus img, .promo-box-container .promo-box:focus .promo-text {
-      transform: scale(1.5);
-      -moz-transform: scale(1.5);
-      -webkit-transform: scale(1.5);
-      -o-transform: scale(1.5);
-      -ms-transform: scale(1.5);
-      /* IE 9 */
-      -ms-filter: "progid:DXImageTransform.Microsoft.Matrix(M11=1.5, M12=0, M21=0, M22=1.5, SizingMethod='auto expand')";
-      /* IE8 */
-      filter: progid:DXImageTransform.Microsoft.Matrix(M11=1.5, M12=0, M21=0, M22=1.5, SizingMethod='auto expand');
-      /* IE6 and 7 */ }
+  margin-left: auto;
+}
+.promo-box-container .promo-box {
+  cursor: pointer;
+  margin-top: 0.125rem;
+  margin-bottom: 0.125rem;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  text-align: center;
+  padding: 0;
+  height: 17rem;
+  transition: all 0.5s ease-out;
+  box-shadow: inset 0px 0px 9999px 9999px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: inset 0px 0px 9999px 9999px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: inset 0px 0px 9999px 9999px rgba(0, 0, 0, 0.5);
+}
+.promo-box-container .promo-box img {
+  margin: 0;
+  position: relative;
+  flex-shrink: 0;
+  min-width: 100%;
+  z-index: -1;
+  bottom: 0;
+  transition: all 0.5s ease-out;
+}
+.promo-box-container .promo-box .promo-text {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #FFF;
+  transition: all 0.25s ease-out;
+  z-index: 1;
+  max-width: 50%;
+}
+.promo-box-container .promo-box .promo-text h1, .promo-box-container .promo-box .promo-text h2, .promo-box-container .promo-box .promo-text h3, .promo-box-container .promo-box .promo-text h4, .promo-box-container .promo-box .promo-text h5, .promo-box-container .promo-box .promo-text h6 {
+  font-weight: 900;
+}
+.promo-box-container .promo-box .promo-text h1 {
+  font-size: 2.5rem;
+}
+.promo-box-container .promo-box:before {
+  top: 0;
+  left: -100%;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: #E3782E;
+  position: absolute;
+  transition: all 0.25s ease-in;
+}
+.promo-box-container .promo-box:nth-child(4n) {
+  margin-right: 0;
+}
+.promo-box-container .promo-box:hover .promo-text {
+  transform: scale(1.25) translateY(-40%);
+  -moz-transform: scale(1.25) translateY(-40%);
+  -webkit-transform: scale(1.25) translateY(-40%);
+  -o-transform: scale(1.25) translateY(-40%);
+  -ms-transform: scale(1.25) translateY(-40%);
+  /* IE 9 */
+}
+.promo-box-container .promo-box:hover:before {
+  left: 0;
+}
 
 /*  HELPERS  */
 .flex-top {
-  align-items: flex-start !important; }
+  align-items: flex-start !important;
+}
 
 .ragged-orange {
-  color: #E3782E; }
+  color: #E3782E;
+}
 
 .dark-orange {
-  color: #CE5C0D; }
+  color: #CE5C0D;
+}
 
 .ragged-blue {
-  color: #2F708F; }
+  color: #2F708F;
+}
 
 .dark-grey {
-  color: #4A4A4A; }
+  color: #4A4A4A;
+}
 
 /*# sourceMappingURL=style.css.map */
