--- a/css/style.scss
+++ b/css/style.scss
@@ -182,6 +182,11 @@ footer{
 
 
 /*  CUSTOM  */
+#ragged-mission {
+	margin: 0;
+	max-width: 100%;
+	background-color: $dark-grey;
+}
 #mobile-links {
 	padding-left: 2rem;
 	.menu {
@@ -254,7 +259,7 @@ footer{
 	}
 }
 .promo-box-container {
-	max-width: 750px;
+	max-width: 1080px;
 	margin: {
 		top: 1rem;
 		right: auto;
@@ -262,6 +267,11 @@ footer{
 		left: auto;
 	}
 	.promo-box {
+		cursor: pointer;
+		margin: {
+			top: 0.125rem;
+			bottom: 0.125rem;
+		}
 		position: relative;
 		overflow: hidden;
 		display: flex;
@@ -269,7 +279,7 @@ footer{
 		justify-content: center;
 		text-align: center;
 		padding: 0;
-		height: 12rem;
+		height: 17rem;
 		transition: all 0.5s ease-out;
 		box-shadow: inset 0px 0px 9999px 9999px rgba(0,0,0,0.5);
 		-webkit-box-shadow: inset 0px 0px 9999px 9999px rgba(0,0,0,0.5);
@@ -278,33 +288,53 @@ footer{
 			margin: 0;
 			position: relative;
 			flex-shrink: 0;
-	    min-width: 100%;
-	    min-height: 100%;
+    	min-width: 100%;
 			z-index: -1;
 			bottom: 0;
 			transition: all 0.5s ease-out;
 		}
 		.promo-text {
 			position: absolute;
-			top: 40%;
-			// transform: translateY(500%);
+			top: 50%;
+			transform: translateY(-50%);
 			color: #FFF;
-			transition: all 0.5s ease-out;
+			transition: all 0.25s ease-out;
+			z-index: 1;
+			max-width: 50%;
+			h1,h2,h3,h4,h5,h6 {
+				font-weight: 900;
+			}
+			h1 {
+				font-size: 2.5rem;
+			}
 		}
 	}
-	.promo-box:hover, .promo-box:focus {
-		box-shadow: inset 0px 0px 9999px 9999px rgba(227,120,46,0.9);
-		-webkit-box-shadow: inset 0px 0px 9999px 9999px rgba(227,120,46,0.9);
-		-moz-box-shadow: inset 0px 0px 9999px 9999px rgba(227,120,46,0.9);
-		img, .promo-text {
-			transform: scale(1.5);
-	    -moz-transform: scale(1.5);
-	    -webkit-transform: scale(1.5);
-	    -o-transform: scale(1.5);
-	    -ms-transform: scale(1.5); /* IE 9 */
-	    -ms-filter: "progid:DXImageTransform.Microsoft.Matrix(M11=1.5, M12=0, M21=0, M22=1.5, SizingMethod='auto expand')"; /* IE8 */
-	    filter: progid:DXImageTransform.Microsoft.Matrix(M11=1.5, M12=0, M21=0, M22=1.5, SizingMethod='auto expand'); /* IE6 and 7 */
+	.promo-box:before {
+		top: 0;
+		left: -100%;
+		content: "";
+		width: 100%;
+		height: 100%;
+		background-color: $ragged-orange;
+		position: absolute;
+		transition: all 0.25s ease-in;
+	}
+	.promo-box:nth-child(4n) {
+		margin: {
+			right: 0;
 		}
+	}
+	.promo-box:hover {
+		.promo-text {
+			transform: scale(1.25) translateY(-40%);
+	    -moz-transform: scale(1.25) translateY(-40%);
+	    -webkit-transform: scale(1.25) translateY(-40%);
+	    -o-transform: scale(1.25) translateY(-40%);
+	    -ms-transform: scale(1.25) translateY(-40%); /* IE 9 */
+		}
+	}
+	.promo-box:hover:before {
+		left: 0;
 	}
 }
 
