--- a/css/style.scss
+++ b/css/style.scss
@@ -3,6 +3,7 @@ $ragged-orange: #E3782E;
 $dark-orange: #CE5C0D;
 $ragged-blue: #2F708F;
 $dark-grey: #4A4A4A;
+$light-grey: #E6E6E6;
 
 
 /*  MEASUREMENTS  */
@@ -152,7 +153,7 @@ footer{
 	.tab-item.active a {
 		border-color: $ragged-orange;
 		color: $dark-orange;
-		font-weight: 500;	
+		font-weight: 500;
 	}
 }
 .tab .tab-item a:focus, .tab .tab-item a:hover{
@@ -182,10 +183,46 @@ footer{
 
 
 /*  CUSTOM  */
+#ragged-directions {
+	max-width: 1080px;
+	margin-bottom: 1rem;
+	.map-label {
+		margin-bottom: 1rem;
+		h1 {
+			margin-top: 0;
+			margin-bottom: 0;
+		}
+	}
+	#map {
+	 width: 100%;
+	 min-height: 500px;
+	 background-color: grey;
+	 margin-bottom: 1rem;
+	}
+	#map-info {
+		display: flex;
+		align-items: center;
+	}
+}
 #ragged-mission {
 	margin: 0;
 	max-width: 100%;
-	background-color: $dark-grey;
+	h1, h2, h3, h4, h5, h6, p {
+		color: $dark-grey;
+	}
+	.mission-wrapper {
+		max-width: 1440px;
+		background-color: #FFF;
+		padding: {
+			top: 1rem;
+			right: 1rem;
+			bottom: 1rem;
+			left: 1rem;
+		}
+		a {
+			color: $ragged-orange;
+		}
+	}
 }
 #mobile-links {
 	padding-left: 2rem;
@@ -263,14 +300,14 @@ footer{
 	margin: {
 		top: 1rem;
 		right: auto;
-		bottom: 1rem;
+		bottom: 0;
 		left: auto;
 	}
 	.promo-box {
 		cursor: pointer;
 		margin: {
-			top: 0.125rem;
-			bottom: 0.125rem;
+			top: 0.25rem;
+			bottom: 0.25rem;
 		}
 		position: relative;
 		overflow: hidden;
@@ -318,11 +355,6 @@ footer{
 		background-color: $ragged-orange;
 		position: absolute;
 		transition: all 0.25s ease-in;
-	}
-	.promo-box:nth-child(4n) {
-		margin: {
-			right: 0;
-		}
 	}
 	.promo-box:hover {
 		.promo-text {
