--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,8 @@ footer {
   width: 100%;
   display: flex;
   justify-content: center;
-  overflow: visible; }
+  overflow: visible;
+  background-position-x: 0; }
   .card-catalog #social-card {
     max-width: 750px;
     margin-top: 1rem; }
